Timezone and volumes

--- a/tasks/bash-prompt.yml
+++ b/tasks/bash-prompt.yml
@@ -2,7 +2,7 @@
 
 - name: Create bash-prompt.sh
   template:
-    src: files/bash-prompt.sh.j2
+    src: templates/bash-prompt.sh.j2
     dest: /etc/profile.d/bash-prompt.sh
     force: true
   become: true
