--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -22,6 +22,9 @@
 - name: Configure bash prompt
   include: bash-prompt.yml
 
+- name: Create our swapfile
+  include: create-swap-file.yml
+
 - name: Find and mount our ebs volume if specified
   include: volumes.yml
   when: mount_point|default(False)
