--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -26,6 +26,10 @@
   include: create-swap-file.yml
   when: ansible_env.CONFIGURE_SWAP|default(False)
 
+- name: Enable passwordless sudo for predifined groups
+  include: create-sudoers.yml
+  when: enable_sudoers|default(true)
+
 - name: Find and mount our ebs volume if specified
   include: volumes.yml
   when: mount_point|default(False)
