--- a/tasks/enable-sudoers.yml
+++ b/tasks/enable-sudoers.yml
@@ -6,6 +6,6 @@
     dest: "/etc/sudoers.d/{{ group_name }}"
     owner: root
     mode: 0440
-  with_items: "{{ sudoer_groups| default['webops'] }}"
+  with_items: "{{ sudoer_groups| default(['webops']) }}"
   loop_control:
     loop_var: group_name
