--- a/tasks/docker.yml
+++ b/tasks/docker.yml
@@ -95,3 +95,8 @@
     state: started
     enabled: true
   become: true
+
+- name: Install docker python library so that ansible can use docker commands
+  pip:
+    name: docker-py
+  become: true
