--- a/tasks/docker.yml
+++ b/tasks/docker.yml
@@ -12,39 +12,12 @@
 
 - name: Remove existing docker install
   package:
-    name: "{{ item }}"
+    name: docker
     state: absent
-  with_items:
-    - docker
-    - docker-client
-    - docker-client-latest
-    - docker-common
-    - docker-latest
-    - docker-latest-logrotate
-    - docker-logrotate
-    - docker-selinux
-    - docker-engine-selinux
-    - docker-engine
-  ignore_errors: true
 
-- name: Import Docker CE repository gpg key
-  rpm_key:
-    key: https://download.docker.com/linux/centos/gpg
-    state: present
-
-- name: Add Docker CE repository
-  get_url:
-    url: https://download.docker.com/linux/centos/docker-ce.repo
-    dest: /etc/yum.repos.d/docker-ce.repo
-    force: yes
-    owner: root
-    group: root
-    mode: 0644
-
-- name: Install "docker-ce"
-  package:
-    name: "docker-ce"
-    state: present
+- name: Install docker from amazon linux extras
+  command: amazon-linux-extras install docker
+  become: true
 
 - name: Get our user with UID of 1000
   getent:
@@ -58,6 +31,22 @@
     groups: docker
     append: true
   become: true
+  when: uid_data.ansible_facts.getent_passwd.keys().0|default(false)
+
+- name: Get our user with name of hmpps_sys_user
+  getent:
+    database: passwd
+    key: hmpps_sys_user
+    fail_key: false
+  register: uid_data
+
+- name: Allow our user to run docker without sudo
+  user:
+    name: "{{ uid_data.ansible_facts.getent_passwd.keys().0 }}"
+    groups: docker
+    append: true
+  become: true
+  when: uid_data.ansible_facts.getent_passwd.keys().0|default(false)
 
 - name: Install docker-compose binary
   get_url:
@@ -66,37 +55,7 @@
     mode: +x
   become: true
 
-- name: Set our max_map_count
-  sysctl:
-    name: vm.max_map_count
-    value: 262144
-    state: present
-  become: true
-
-- name: Set our hard nofile ulimit
-  pam_limits:
-    domain: '*'
-    limit_type: hard
-    limit_item: nofile
-    value: 65536
-  become: true
-
-- name: Set our soft nofile ulimit
-  pam_limits:
-    domain: '*'
-    limit_type: soft
-    limit_item: nofile
-    value: 65536
-  become: true
-
 - name: Start docker service
   service:
     name: docker
     state: started
-    enabled: true
-  become: true
-
-- name: Install docker python library so that ansible can use docker commands
-  pip:
-    name: docker-py
-  become: true
