Restart docker after we isntall our python lib

--- a/tasks/docker.yml
+++ b/tasks/docker.yml
@@ -135,3 +135,10 @@
   pip:
     name: docker-py
   become: true
+
+- name: Restart our docker service
+  service:
+    name: docker
+    state: restarted
+  become: true
+
