Only change if the line is found

--- a/tasks/password-age.yml
+++ b/tasks/password-age.yml
@@ -5,6 +5,8 @@
     path: /etc/login.defs
     regexp: '^{{ item }}\s\d{1,}'
     line: "{{ item }} -1"
+    backrefs: yes
+    state: present
   become: true
   with_items:
     - PASS_MAX_DAYS
