--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -72,3 +72,10 @@
 
 - name: Enable some maintenance crons
   include: crons.yml
+
+- block:
+    - name: Mount our efs share
+      include: efs.yml
+      when:
+        - efs_mount_dir|default(False)
+        - efs_file_system_id|default(False)
