--- a/tasks/packages.yml
+++ b/tasks/packages.yml
@@ -7,3 +7,8 @@
   with_items:
     - vim # yum hmpps-base-packer/ansible/group_vars/centos7
     - bzip2 # added here for expediency
+    - jq
+    - amazon-efs-utils
+    - awslogs
+    - gcc
+    - tree
